--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <title>Colmar Acadamy</title>
     </head>
     <body>
@@ -9,27 +10,32 @@
         <!--Header-->
 
         <header class="header">
-
-            <img src="./resources/images/ic-logo.svg" class="logo" alt="logo">
-            <h1>Colmar Acadamy</h1>
-
+            <div class="name">
+              <img class="logo" src="./resources/images/ic-logo.svg" height="32px">
+              <h3 id="colmar">COLMAR<span id="acadamy">ACADAMY</span></h3>
+            </div>
+    
             <div class="linksbox">
-                <a class ="link" href="#">On Campus</a></div>
-                <a href="#">Online</a>
-                <a href="#">or Companies</a>
-                <a href="#">sign in</a>
+                <a class ="link" href="#">On Campus</a>
+                <a class ="link" href="#">Online</a>
+                <a class ="link" href="#">Companies</a>
+                <button href="#">sign in</button>
             </div>
 
         </header>
 
         <!--Start Here Section-->
 
-            <div class="starthere">
-                <img src="resources/images/banner.jpg" alt="Students reading and studying outside">
-                <h2>Learn something new every day</h2>
-                <p>Learning is an adventure we can take anytime, anywhere</p>
-                <button class="Start" href="#">Start Here</button>
+        <div class="imgbox">
+
+            <img class="img1" src="resources/images/banner.jpg" alt="Students reading and studying outside">
+
+            <div class="button2">
+                <h2>Learn something new every day</h2> 
+                <p>"Learning is an adventure we can all take anytime, anywhere"</p>
+                <button href="#">Start Here</button>
             </div>
-       
+
+        </div>
     </body>
 </html>
