ready for mobile box 4 images go toosmall

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
             <div class="container">
 
-                <div class="imgbox">
+                <div class="imgbox" id="imgboxmob">
                     <img class="bigimg" src="resources/images/banner.jpg" alt="Students reading and studying outside">
                 </div>
 
-                <div class="infobox">
+                <div class="infobox" id="buttonmob">
                     <h2>Learn something new every day</h2> 
                     <p>"Learning is an adventure we can all take anytime, anywhere"</p>
                     <br>
@@ -53,14 +53,14 @@
     
             <div class="container">
 
-                <div class="imgbox">
+                <div class="imgbox" id="imgboxmob2">
                     <img class="bigimg" src="resources/images/information-main.jpg" alt="male student reads text book">
                     <h2 class="bigimg">It doesn't hurt to keep practicing</h2>
                     <p class="bigimg">"Successful people will tell you that practice makes perminant. The more we practice the more oportunity we provide ourselves to improve, whilst the quality of that practice directly corresponds to how much we do"</p>
                     <br><p class="bigimg"><em>Ruaridh Stevenson, Adventure Leader</em></p>
                 </div>
 
-                <div class="infobox">
+                <div class="infobox" id="infoboxmob">
 
                     <div class="thumbox">
 
@@ -151,19 +151,19 @@
             </div>
         </div>
 
-        <div class="bigbox light">
+        <div class="bigbox light" id="box4">
             <div class="container2">
                 <h1>Thesis Exibit</h1><br>
 
                 <div class="container">
 
-                    <div class="imgbox">
+                    <div class="imgbox" id="vidboxmob">
                         <video class="bigimg" src="resources/videos/thesis.mp4" controls></video>
                         <h4>Raimagine Urban</h4>
                         <p>Inovate, Design, Create, Invent, Reinvent, Discover and Learn</p>
                     </div>
 
-                    <div class="infobox">
+                    <div class="infobox" id="infoboxmob2">
 
                         <div class="thumbox">
 
