--- a/index.html
+++ b/index.html
@@ -2,8 +2,27 @@
 <html>
 
     <head>
+        <link rel="apple-touch-icon" sizes="57x57" href="resources/images/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="resources/images/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="resources/images/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="resources/images/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="resources/images/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="resources/images/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="resources/images/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="resources/images/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="resources/images/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="resources/images/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="resources/images/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="resources/images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="resources/images/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="resources/images/favicon-16x16.png">
+        <link rel="manifest" href="resources/images/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="resources/images/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
         <link href="resources/css/style.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/a5851e3ecd.js" crossorigin="anonymous"></script>
         <title>Colmar Acadamy</title>
     </head>
 
@@ -197,8 +216,8 @@
         </div>
 
         <div class="footer">
-            <div><i class="far fa-copyright"></i><p>2016 Colmar Acadamy all rights reserved</p></div>
-            <div class="links"><a href="#">terms </a><a href="#"> privary</a></div>
+            <div><i class="far fa-copyright"> 2016 Colmar Acadamy all rights reserved</i></div>
+            <div class="links"><a href="#">terms</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">privary</a></div>
         </div>
     </body>
 </html>
